--- a/index.html
+++ b/index.html
@@ -41,23 +41,42 @@ body {
 					<th>Igel M310C</th>
 					<th>Wyse V10LE</th>
 					<th>Medion MSI MS7418</th>
+					<th>HP T5550</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td>Zdjęcie</td>
-					<td><a href="HP T5300/photo.jpg"><img src="HP T5300/tn.jpg"></img></a></td>
+					<td>
+						<a href="HP T5300/photo.jpg"><img src="HP T5300/tn.jpg"></img></a>
+						<br/>
+						<a href="HP T5300/photo2.jpg"><img src="HP T5300/tn2.jpg"></img></a>
+					</td>
 					<td>
 						<a href="HP T5700/photo.jpg"><img src="HP T5700/tn.jpg"></img></a>
 						<br/>
 						<a href="HP T5700/photo2.jpg"><img src="HP T5700/tn2.jpg"></img></a>
+						<br/>
+						<a href="HP T5700/photo3.jpg"><img src="HP T5700/tn3.jpg"></img></a>
 					</td>
-					<td><a href="HP T5520/photo.jpg"><img src="HP T5520/tn.jpg"></img></a></td>
-					<td><a href="HP T5720/photo.jpg"><img src="HP T5720/tn.jpg"></img></a></td>
+					<td>
+						<a href="HP T5520/photo.jpg"><img src="HP T5520/tn.jpg"></img></a>
+						<br/>
+						<a href="HP T5520/photo2.jpg"><img src="HP T5520/tn2.jpg"></img></a>
+						<br/>
+						<a href="HP T5520/photo3.jpg"><img src="HP T5520/tn3.jpg"></img></a>
+					</td>
+					<td>
+						<a href="HP T5720/photo.jpg"><img src="HP T5720/tn.jpg"></img></a>
+						<br/>
+						<a href="HP T5720/photo2.jpg"><img src="HP T5720/tn2.jpg"></img></a>
+					</td>
 					<td>
 						<a href="Fujitsu Siemens Futro S550-2/photo.jpg"><img src="Fujitsu Siemens Futro S550-2/tn.jpg"></img></a>
 						<br/>
 						<a href="Fujitsu Siemens Futro S550-2/photo2.jpg"><img src="Fujitsu Siemens Futro S550-2/tn2.jpg"></img></a>
+						<br/>
+						<a href="Fujitsu Siemens Futro S550-2/photo3.jpg"><img src="Fujitsu Siemens Futro S550-2/tn3.jpg"></img></a>
 					</td>
 					<td>
 						<a href="Chip PC XPD4741/photo.jpg"><img src="Chip PC XPD4741/tn.jpg"></img></a>
@@ -67,6 +86,8 @@ body {
 						<a href="Chip PC XPD4741/photo3.jpg"><img src="Chip PC XPD4741/tn3.jpg"></img></a>
 						<br/>
 						<a href="Chip PC XPD4741/photo4.jpg"><img src="Chip PC XPD4741/tn4.jpg"></img></a>
+						<br/>
+						<a href="Chip PC XPD4741/photo5.jpg"><img src="Chip PC XPD4741/tn5.jpg"></img></a>
 					</td>
 					<td><a href="Wyse C00X/photo.jpg"><img src="Wyse C00X/tn.jpg"></img></a></td>
 					<td>
@@ -79,6 +100,8 @@ body {
 						<a href="Jet Star LT310/photo3.jpg"><img src="Jet Star LT310/tn3.jpg"></img></a>
 						<br/>
 						<a href="Jet Star LT310/photo5.png"><img src="Jet Star LT310/tn5.png"></img></a>
+						<br/>
+						<a href="Jet Star LT310/photo6.jpg"><img src="Jet Star LT310/tn6.jpg"></img></a>
 					</td>
 					<td>
 						<a href="Fujitsu Siemens Futro S900/photo.jpg"><img src="Fujitsu Siemens Futro S900/tn.jpg"></img></a>
@@ -123,6 +146,19 @@ body {
 						<br/>
 						<a href="Medion MS7418/photo3.jpg"><img src="Medion MS7418/tn3.jpg"></img></a>
 					</td>
+					<td>
+						<a href="HP T5550/photo.jpg"><img src="HP T5550/tn.jpg"></img></a>
+						<br/>
+						<a href="HP T5550/photo2.jpg"><img src="HP T5550/tn2.jpg"></img></a>
+						<br/>
+						<a href="HP T5550/photo3.jpg"><img src="HP T5550/tn3.jpg"></img></a>
+						<br/>
+						<a href="HP T5550/photo4.jpg"><img src="HP T5550/tn4.jpg"></img></a>
+						<br/>
+						<a href="HP T5550/photo5.jpg"><img src="HP T5550/tn5.jpg"></img></a>
+						<br/>
+						<a href="HP T5550/photo6.png"><img src="HP T5550/tn6.png"></img></a>
+					</td>
 				</tr>
 				<tr>
 					<td>CPU</td>
@@ -139,6 +175,7 @@ body {
 					<td>Centaur VIA Nano <strong>U3500</strong> 1 GHz</td>
 					<td>Centaur VIA Eden 1.2 GHz</td>
 					<td>Intel&reg; Atom&trade; CPU <strong>230</strong> SLB6Z 1.6GHz</td>
+					<td>Centaur VIA Nano <strong>U3500</strong> 1 GHz</td>
 				</tr>
 				<tr>
 					<td>Family/Model/Stepping</td>
@@ -155,11 +192,13 @@ body {
 					<td>6/15/10</td>
 					<td>6/13/0</td>
 					<td>6/28/2</td>
+					<td>6/15/8</td>
 				</tr>
 				<tr>
 					<td>Code Morphing Software</td>
 					<td>4.4.1-10-125 20030401 14:19</td>
 					<td>4.4.1-10-125 20030401 14:19</td>
+					<td>-</td>
 					<td>-</td>
 					<td>-</td>
 					<td>-</td>
@@ -187,6 +226,7 @@ body {
 					<td>1994.83</td>
 					<td>2400.04</td>
 					<td>3192.09</td>
+					<td>1994.94</td>
 				</tr>
 				<tr>
 					<td>SMBIOS</td>
@@ -203,6 +243,7 @@ body {
 					<td>2.5</td>
 					<td>2.3</td>
 					<td>2.5</td>
+					<td>2.6</td>
 				</tr>
 				<tr>
 					<td>DMI</td>
@@ -219,6 +260,7 @@ body {
 					<td>IGEL Technology GmbH M310C/VX855</td>
 					<td>WYSE V CLASS LE</td>
 					<td>MEDIONPC MS-7418/MS-7418</td>
+					<td>Hewlett-Packard HP t5550 Thin Client/158Ch</td>
 				</tr>
 				<tr>
 					<td>BIOS</td>
@@ -235,6 +277,7 @@ body {
 					<td>6.00 PG 07/20/2011</td>
 					<td>1.19 07/16/2009</td>
 					<td>A7418IM7.128 11/27/2008</td>
+					<td>786R9 v1.03 11/29/2010</td>
 				</tr>
 				<tr>
 					<td>RAM</td>
@@ -250,6 +293,7 @@ body {
 					<td>2 GB</td>
 					<td>1 GB</td>
 					<td>512 MB</td>
+					<td>1 GB</td>
 					<td>1 GB</td>
 				</tr>
 				<tr>
@@ -267,6 +311,7 @@ body {
 					<td>PATA max UDMA/133 (pata_via)</td>
 					<td>PATA max UDMA/133 (pata_via)</td>
 					<td>SATA max UDMA/133 (ata_piix)</td>
+					<td>PATA max UDMA/133 (pata_via)</td>
 				</tr>
 				<tr>
 					<td>Ethernet</td>
@@ -283,6 +328,7 @@ body {
 					<td>RTL8211B Gigabit Ethernet (r8169-118) + RTL8169sc/8110sc</td>
 					<td>VIA Rhine III</td>
 					<td>RTL8211B Gigabit Ethernet (r8169-0-100) + RTL8168c/8111c</td>
+					<td>Broadcom BCM57780 Tigon3 rev.57780001</td>
 				</tr>
 				<tr>
 					<td>USB</td>
@@ -299,6 +345,7 @@ body {
 					<td>5x 2.0 (EHCI+UHCI)</td>
 					<td>3x 2.0 (EHCI+UHCI)</td>
 					<td>6x 2.0 (EHCI+UHCI)</td>
+					<td>8x 2.0 (EHCI+UHCI)</td>
 				</tr>
 				<tr>
 					<td>Dźwięk</td>
@@ -315,6 +362,7 @@ body {
 					<td>VIA VX855 (HD Audio)</td>
 					<td>VIA 1613</td>
 					<td>Realtek ALC888S (HD Audio)</td>
+					<td>Intel (HD Audio)</td>
 				</tr>
 				<tr>
 					<td>Czujniki</td>
@@ -331,6 +379,7 @@ body {
 					<td>Winbond W83697HF (w83627hf.656)</td>
 					<td>VIA VT1211 rev.2 (vt1211.24576)</td>
 					<td>ONsemi ADT7468 (i801_smbus, lm85)</td>
+					<td>VIA VT1211 rev.2 (vt1211.4352)</td>
 				</tr>
 				<tr>
 					<td>Wejście do BIOSu</td>
@@ -347,6 +396,7 @@ body {
 					<td>DEL</td>
 					<td>DEL</td>
 					<td>DEL</td>
+					<td>F10</td>
 				</tr>
 				<tr>
 					<td>Hasło BIOSu</td>
@@ -358,6 +408,7 @@ body {
 					<td>3101233</td>
 					<td>Fireport</td>
 					<td>Xtracool</td>
+					<td></td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -379,6 +430,7 @@ body {
 					<td>SODIMM DDR2 667</td>
 					<td>SODIMM DDR2</td>
 					<td>SODIMM DDR2 400/533/667 max.2GB</td>
+					<td>SODIMM DDR3</td>
 				</tr>
 				<tr>
 					<td>Pamięć stała</td>
@@ -395,6 +447,7 @@ body {
 					<td>IDE 44pin + CompactFlash</td>
 					<td>IDE 44pin</td>
 					<td>SATA, miniPCIE, SD: Realtek RTS5159 (#20071114173400000)</td>
+					<td>IDE 44pin</td>
 				</tr>
 				<tr>
 					<td>PCI</td>
@@ -407,6 +460,7 @@ body {
 					<td>-</td>
 					<td>00:08</td>
 					<td>02:07</td>
+					<td>-</td>
 					<td>-</td>
 					<td>-</td>
 					<td>-</td>
@@ -427,6 +481,7 @@ body {
 					<td>1</td>
 					<td>1</td>
 					<td>0</td>
+					<td>1</td>
 				</tr>
 				<tr>
 					<td>LPT DSUB25 #</td>
@@ -443,6 +498,7 @@ body {
 					<td>0</td>
 					<td>1</td>
 					<td>0</td>
+					<td>1</td>
 				</tr>
 				<tr>
 					<td>Grafika</td>
@@ -459,6 +515,7 @@ body {
 					<td>DVI</td>
 					<td>DVI</td>
 					<td>VGA</td>
+					<td>DVI x2</td>
 				</tr>
 				<tr>
 					<td>Zasilanie (nom.)</td>
@@ -474,6 +531,7 @@ body {
 					<td>12 V / 3 A</td>
 					<td>12 V / 3 A</td>
 					<td>12 V</td>
+					<td>19 V / 3,42 A</td>
 					<td>19 V / 3,42 A</td>
 				</tr>
 				<tr>
@@ -491,6 +549,7 @@ body {
 					<td>19,5 W</td>
 					<td>12-15 W</td>
 					<td>17,4 W (@ 12 V)</td>
+					<td>8 W (@ 12 V)</td>
 				</tr>
 				<tr>
 					<td>+ KNC1</td>
@@ -507,6 +566,7 @@ body {
 					<td>-</td>
 					<td>-</td>
 					<td>-</td>
+					<td>-</td>
 				</tr>
 				<tr>
 					<td>+ RT5730</td>
@@ -518,6 +578,7 @@ body {
 					<td>0,84 W</td>
 					<td></td>
 					<td>0,4 W</td>
+					<td></td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -539,6 +600,7 @@ body {
 					<td></td>
 					<td></td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr>
 					<td>+ Logitech C270HD</td>
@@ -555,6 +617,7 @@ body {
 					<td></td>
 					<td>2 W</td>
 					<td></td>
+					<td></td>
 				</tr>
 				<tr>
 					<td>+ hub, BT, RS232</td>
@@ -564,6 +627,7 @@ body {
 					<td></td>
 					<td></td>
 					<td>2,2 W (Genesys, CSR BTA-403, ARK3116)</td>
+					<td></td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -587,22 +651,7 @@ body {
 					<td></td>
 					<td></td>
 					<td></td>
-				</tr>
-				<tr>
-					<td>IP</td>
-					<td><a href="https://192.168.0.162">192.168.0.162</a></td>
-					<td><a href="https://192.168.0.126">192.168.0.126</a></td>
-					<td><a href="https://192.168.0.172">192.168.0.172</a></td>
-					<td><a href="https://192.168.0.167">192.168.0.167</a></td>
-					<td><a href="https://192.168.0.148">192.168.0.148</a></td>
 					<td></td>
-					<td><a href="https://192.168.0.200">192.168.0.200</a></td>
-					<td><a href="https://192.168.0.118">192.168.0.118</a></td>
-					<td><a href="https://192.168.0.140">192.168.0.140</a></td>
-					<td><a href="https://192.168.0.104">192.168.0.104</a></td>
-					<td><a href="https://192.168.0.154">192.168.0.154</a></td>
-					<td><a href="https://192.168.0.231">192.168.0.231</a></td>
-					<td><a href="https://192.168.0.165">192.168.0.165</a></td>
 				</tr>
 				<tr>
 					<td>cpuinfo</td>
@@ -619,6 +668,7 @@ body {
 					<td><a href="Igel M310C/cpuinfo.txt">cpuinfo</a></td>
 					<td><a href="Wyse V10LE/cpuinfo.txt">cpuinfo</a></td>
 					<td><a href="Medion MS7418/cpuinfo.txt">cpuinfo</a></td>
+					<td><a href="HP T5550/cpuinfo.txt">cpuinfo</a></td>
 				</tr>
 				<tr>
 					<td>lspci</td>
@@ -635,6 +685,7 @@ body {
 					<td><a href="Igel M310C/lspci.txt">lspci</a></td>
 					<td><a href="Wyse V10LE/lspci.txt">lspci</a></td>
 					<td><a href="Medion MS7418/lspci.txt">lspci</a></td>
+					<td><a href="HP T5550/lspci.txt">lspci</a></td>
 				</tr>
 				<tr>
 					<td>lsusb</td>
@@ -651,6 +702,7 @@ body {
 					<td><a href="Igel M310C/lsusb.txt">lsusb</a></td>
 					<td><a href="Wyse V10LE/lsusb.txt">lsusb</a></td>
 					<td><a href="Medion MS7418/lsusb.txt">lsusb</a></td>
+					<td><a href="HP T5550/lsusb.txt">lsusb</a></td>
 				</tr>
 				<tr>
 					<td>lsmod</td>
@@ -667,6 +719,7 @@ body {
 					<td><a href="Igel M310C/lsmod.txt">lsmod</a></td>
 					<td><a href="Wyse V10LE/lsmod.txt">lsmod</a></td>
 					<td><a href="Medion MS7418/lsmod.txt">lsmod</a></td>
+					<td><a href="HP T5550/lsmod.txt">lsmod</a></td>
 				</tr>
 				<tr>
 					<td>input</td>
@@ -683,6 +736,7 @@ body {
 					<td><a href="Igel M310C/input.txt">input</a></td>
 					<td><a href="Wyse V10LE/input.txt">input</a></td>
 					<td><a href="Medion MS7418/input.txt">input</a></td>
+					<td><a href="HP T5550/input.txt">input</a></td>
 				</tr>
 				<tr>
 					<td>sound</td>
@@ -699,6 +753,7 @@ body {
 					<td><a href="Igel M310C/sound.txt">sound</a></td>
 					<td><a href="Wyse V10LE/sound.txt">sound</a></td>
 					<td><a href="Medion MS7418/sound.txt">sound</a></td>
+					<td><a href="HP T5550/sound.txt">sound</a></td>
 				</tr>
 				<tr>
 					<td>hwmon</td>
@@ -715,6 +770,24 @@ body {
 					<td><a href="Igel M310C/hwmon.txt">hwmon</a></td>
 					<td><a href="Wyse V10LE/hwmon.txt">hwmon</a></td>
 					<td><a href="Medion MS7418/hwmon.txt">hwmon</a></td>
+					<td><a href="HP T5550/hwmon.txt">hwmon</a></td>
+				</tr>
+				<tr>
+					<td>irq</td>
+					<td><a href="HP T5300/irq.txt">irq</a></td>
+					<td><a href="HP T5700/irq.txt">irq</a></td>
+					<td><a href="HP T5520/irq.txt">irq</a></td>
+					<td><a href="HP T5720/irq.txt">irq</a></td>
+					<td><a href="Fujitsu Siemens Futro S550-2/irq.txt">irq</a></td>
+					<td><a href="Chip PC XPD4741/irq.txt">irq</a></td>
+					<td><a href="Wyse C00X/irq.txt">irq</a></td>
+					<td><a href="Jet Star LT310/irq.txt">irq</a></td>
+					<td><a href="Fujitsu Siemens Futro S900/irq.txt">irq</a></td>
+					<td><a href="Igel D220/irq.txt">irq</a></td>
+					<td><a href="Igel M310C/irq.txt">irq</a></td>
+					<td><a href="Wyse V10LE/irq.txt">irq</a></td>
+					<td><a href="Medion MS7418/irq.txt">irq</a></td>
+					<td><a href="HP T5550/irq.txt">irq</a></td>
 				</tr>
 				<tr>
 					<td>sysfs</td>
@@ -731,6 +804,7 @@ body {
 					<td><a href="Igel M310C/sysfs.txt">sysfs</a></td>
 					<td><a href="Wyse V10LE/sysfs.txt">sysfs</a></td>
 					<td><a href="Medion MS7418/sysfs.txt">sysfs</a></td>
+					<td><a href="HP T5550/sysfs.txt">sysfs</a></td>
 				</tr>
 				<tr>
 					<td>dmesg</td>
@@ -747,6 +821,7 @@ body {
 					<td><a href="Igel M310C/dmesg.txt">dmesg</a></td>
 					<td><a href="Wyse V10LE/dmesg.txt">dmesg</a></td>
 					<td><a href="Medion MS7418/dmesg.txt">dmesg</a></td>
+					<td><a href="HP T5550/dmesg.txt">dmesg</a></td>
 				</tr>
 				<tr>
 					<td>Inne strony</td>
@@ -766,6 +841,7 @@ body {
 					<td><a href="https://www.parkytowers.me.uk/thin/Igel/ud/ud3/M310C/">IGEL M310C</a></td>
 					<td><a href="https://www.parkytowers.me.uk/thin/wyse/vx0/WyseV90LE.shtml">Wyse Vx0LE</a></td>
 					<td><a href="https://www.medion.com/de/service/product-detail/20040116">MSI MS7418</a></td>
+					<td><a href="https://www.parkytowers.me.uk/thin/hp/t5570">HP T5570</a></td>
 				</tr>
 			</tbody>
 		</table>
